<resources>
    <string name="app_name">Funcy_Portfolio_Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="work_detail_fragment_label">WorkDetail Fragment</string>
    <string name="work_register_fragment_label">WorkRegister Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_main_fragment">Hello main fragment</string>
    <string name="hello_work_detail_fragment">Hello workDetail fragment</string>
    <string name="hello_work_register_fragment">Hello workRegister fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  WorkRegisterFragment  -->
    <string name="work_public_setting">公開設定</string>
    <string name="work_public">公開</string>
    <string name="work_private">非公開</string>
    <string name="work_title">タイトル</string>
    <string name="work_desc">説明文</string>
    <string name="work_github_link">GitHubリンク</string>
    <string name="work_youtube_link">YouTubeリンク</string>
    <string name="work_tag">タグの設定</string>
    <string name="work_add_tag">タグ追加</string>
    <string name="work_member">関わったメンバー</string>
    <string name="work_necessary">*</string>
    <string name="work_error_title_null">タイトルが入力されていません</string>
    <string name="work_add_img">画像の追加</string>
    <string name="work_list">作品一覧</string>

    <string name="toolbar_back">戻る</string>
    <string name="toolbar_icon">アイコン</string>
    <string name="toolbar_register">投稿</string>
    <string name="toolbar_draft">下書き</string>

    <string name="work_registration_message">投稿が完了しました</string>
    <string name="work_error_message">投稿できませんでした</string>
    <string name="work_loading_message">投稿中です</string>


    <!--  WorkDetailFragment  -->
    <string name="detail_user_name">名前</string>
    <string name="detail_title">タイトル</string>
    <string name="detail_desc">説明文</string>
    <string name="detail_member">参加メンバー</string>
    <string name="detail_github">Github</string>
    <string name="detail_youtube">動画</string>

    <!--  MainFragment  -->
    <string name="main_toolbar_title">Search</string>

    <!--  PersonalFragment  -->
    <string name="personal_username">名前</string>
    <string name="personal_profile">プロフィール</string>
    <string name="personal_skill">スキル</string>
    <string name="personal_mail_address">メールアドレス</string>
    <string name="personal_work">作品一覧</string>

    <!--  PersonalEditFragment  -->
    <string name="edit_personal_public_name">表示名</string>
    <string name="edit_personal_profile">プロフィール</string>
    <string name="edit_personal_skill">スキル</string>


    <!--  NewGroupFragment  -->
    <string name="new_group_status">あなたはグループに所属していません</string>
    <string name="new_group_register">新しくグループを登録する</string>

    <!--  GroupRegisterFragment  -->
    <string name="register_group_name">グループ名</string>
    <string name="register_group_intro">グループ紹介</string>
    <string name="register_group_mail_address">代表者のメールアドレス</string>
    <string name="register_group_reference">メンバーはグループ登録後に追加できます</string>
    <string name="register_group_button">登録</string>

    <!--  GroupFragment  -->
    <string name="group_name">Group Name</string>
    <string name="group_invite">招待</string>
    <string name="group_intro">グループ紹介</string>
    <string name="group_mail_address">代表者のメールアドレス</string>
    <string name="group_member">メンバー一覧</string>
    <string name="group_relatedmember">関わったメンバー</string>

    <!--  GroupEditFragment  -->
    <string name="edit_group_button">保存</string>
    <string name="edit_group_name">グループ名</string>
    <string name="edit_group_intro">グループ紹介文</string>
    <string name="edit_group_skill">スキル</string>


    <!--  LoginFragment  -->
    <string name="login_mail_address">メールアドレス</string>
    <string name="login_password">パスワード</string>
    <string name="login_setting">▶ メールアドレス、パスワードを忘れた方はこちら</string>
    <string name="login_button">ログイン</string>
    <string name="login_registration">新規会員登録</string>
    <string name="login_input">入力してください</string>


    <!--  NewRegistrationFragment  -->
    <string name="registration_public_name">表示名</string>
    <string name="registration_family_name">姓</string>
    <string name="registration_first_name">名</string>
    <string name="registration_mail_address">メールアドレス</string>
    <string name="registration_password">パスワード</string>
    <string name="registration_confirm_password">パスワード確認</string>
    <string name="registration_grade">学年</string>
    <string name="registration_course">所属コース</string>
    <string name="registration_button">上記の内容で登録</string>
    <string name="registration_student_number">学籍番号</string>

    <!--  SettingFragment  -->
    <string name="set_password">現在のパスワード</string>
    <string name="set_new_password">新しいパスワード</string>
    <string name="set_confirm_password">確認用のパスワード</string>
    <string name="set_button">パスワードを変更する</string>

    <!-- GroupListFragment -->
    <string name="group_list_new">新しくグループを登録する</string>
    <string-array name="array_group_list_names">
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
        <item>group Name</item>
    </string-array>

    <string-array name="array_grades">
        <item>学部1年</item>
        <item>学部2年</item>
        <item>学部3年</item>
        <item>学部4年</item>
        <item>修士1年</item>
        <item>修士2年</item>
        <item>博士1年</item>
        <item>博士2年</item>
        <item>博士3年</item>
        <item>教員</item>
    </string-array>
    <string-array name="array_bachelor1st_courses">
        <item>未所属</item>
    </string-array>
    <string-array name="array_bachelor2nd_courses">
        <item>情報システムコース</item>
        <item>情報デザインコース</item>
        <item>複雑系コース</item>
        <item>知能システムコース</item>
    </string-array>
    <string-array name="array_bachelor_courses">
        <item>情報システムコース</item>
        <item>高度ICTコース</item>
        <item>情報デザインコース</item>
        <item>複雑系コース</item>
        <item>知能システムコース</item>
    </string-array>
    <string-array name="array_doctor_courses">
        <item>情報アーキテクチャ領域</item>
        <item>高度ICT領域</item>
        <item>メディアデザイン領域</item>
        <item>複雑系情報科学領域</item>
        <item>知能情報科学領域</item>
    </string-array>
    <string-array name="array_teacher_courses">
        <item>教員</item>
    </string-array>

    <!---Signup Fragment-->
    <string name="comp_registration_message">登録が完了しました</string>

    <!---Authentication Fragment-->
    <string name="message_send_mail">入力したメールアドレスに\n確認コードを送信しました</string>
    <string name="input_code">確認コードを入力してください</string>
    <string name="button_send_code">送信</string>
    <string name="message_not_receive">確認コードが届かない場合</string>
</resources>